Fix: add requirements.txt (was excluded by bad .gitignore rule)

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,11 @@ build/
 venv/
 env/
 
-# Scan outputs
+# Scan outputs (specific names, not all .txt)
 *.json
 *.html
-*.txt
+scan_output*.txt
+report*.txt
 
 # IDE
 .vscode/
